--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -16,6 +16,9 @@
 
     <div id="compose-view">
         <h3>New Email</h3>
+
+        <div id="alert" class="alert alert-danger" role="alert"> alert </div>
+
         <form id="compose-form">
             <div class="form-group">
                 From: <input disabled class="form-control" value="{{ request.user.email }}">
@@ -27,7 +30,7 @@
                 <input class="form-control" id="compose-subject" placeholder="Subject">
             </div>
             <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
-            <input type="submit" class="btn btn-primary"/>
+            <input id="send_mail_button" type="submit" class="btn btn-primary"/>
         </form>
     </div>
 {% endblock %}
