half working sent mailbox

--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -12,7 +12,16 @@
     <hr>
 
     <div id="emails-view">
-        
+    </div>
+
+    <div id="viewemail">
+        <ul id="list">
+            <div class="card">
+                <div class="card-body">
+                This is some text within a card body.
+                </div>
+            </div>
+        </ul>
     </div>
 
     <div id="compose-view">
