--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -15,13 +15,7 @@
     </div>
 
     <div id="viewemail">
-        <ul id="list">
-            <div class="card">
-                <div class="card-body">
-                This is some text within a card body.
-                </div>
-            </div>
-        </ul>
+        <ul id="list"></ul>
     </div>
 
     <div id="compose-view">
