--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -11,7 +11,12 @@
     <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a>
     <hr>
 
-    <div id="emails-view" style="padding-left: 3px">
+    <div id="emails-view">
+    </div>
+
+    <div class="clearfix">
+        <div class="pull-left">To: usha@google.com</div>
+        <div class="pull-right">Date: </div>
     </div>
 
     <div id="compose-view">
