--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -12,11 +12,11 @@
     <hr>
 
     <div id="emails-view">
-    </div>
+        <h3 id="email-header"></h3>
 
-    <div class="clearfix">
-        <div class="pull-left">To: usha@google.com</div>
-        <div class="pull-right">Date: </div>
+        <div id="email-view">
+
+        </div>
     </div>
 
     <div id="compose-view">
