--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -14,9 +14,7 @@
     <div id="emails-view">
         <h3 id="email-header"></h3>
 
-        <div id="email-view">
-
-        </div>
+        <div id="email-view"></div>
     </div>
 
     <div id="compose-view">
