--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -14,7 +14,7 @@
     <div id="emails-view">
         <h3 id="email-header"></h3>
 
-        <table class="table table-borderless">
+        <table class="table table-borderless table-hover" style="table-layout: fixed;">
             <thead>
                 <tr style="display: none;">
                     <th scope="col">sent</th>
