send mail and mailbox is working except read and unread color

--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -14,18 +14,13 @@
     <div id="emails-view">
         <h3 id="email-header"></h3>
 
-        <table class="table table-borderless table-hover" style="table-layout: fixed;">
-            <thead>
-                <tr style="display: none;">
-                    <th scope="col">sent</th>
-                    <th scope="col">subject</th>
-                    <th scope="col">date</th>
-                </tr>
-            </thead>
+        <table class="table table-borderless table-hover">
             <tbody id="email-view">
             </tbody>
         </table>
     </div>
+
+
 
     <div id="compose-view">
         <h3>New Email</h3>
