half working clickable row

--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -14,7 +14,7 @@
     <div id="emails-view">
         <h3 id="email-header"></h3>
 
-        <table class="table table-borderless table-hover">
+        <table class="table table-borderless">
             <tbody id="email-view">
             </tbody>
         </table>
