view mailbox implementation in progress

--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -21,7 +21,6 @@
     </div>
 
 
-
     <div id="compose-view">
         <h3>New Email</h3>
 
@@ -40,6 +39,10 @@
             <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
             <input id="send_mail_button" type="submit" class="btn btn-primary"/>
         </form>
+    </div>
+
+    <div id="view-mail">
+        TODO
     </div>
 {% endblock %}
 
