View Email working with read status

--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -14,7 +14,7 @@
     <div id="emails-view">
         <h3 id="email-header"></h3>
 
-        <table class="table table-borderless">
+        <table id="tableId" class="table table-borderless">
             <tbody id="email-view">
             </tbody>
         </table>
@@ -41,8 +41,8 @@
         </form>
     </div>
 
-    <div id="view-mail">
-        TODO
+    <div id="mail-view" style="display: none;">
+
     </div>
 {% endblock %}
 
